--- a/_posts/2020-06-21-otis.md
+++ b/_posts/2020-06-21-otis.md
@@ -7,6 +7,4 @@ redirect_to:
   - https://otis.leedsraspjam.co.uk
 ---
 
-Some sort of introduction to the website. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pellentesque dui id massa aliquam, et efficitur odio fermentum. Proin mauris nisi, aliquet at convallis vel, vehicula vitae eros. Mauris iaculis varius dolor, ac sollicitudin massa. Proin faucibus libero id nisl sagittis, quis venenatis metus malesuada. Fusce at eleifend tortor. Mauris varius, leo vitae fringilla aliquam, neque nisi dictum dolor, ac vehicula diam diam sodales ipsum. Suspendisse aliquet ligula auctor tortor dapibus, id dapibus purus porta. Duis nec risus faucibus, accumsan nibh eu, consequat sem. Nam condimentum libero at ullamcorper commodo. Mauris ac gravida odio, non blandit risus. Integer vel elementum augue, vitae aliquam diam. Nunc eget molestie metus. Curabitur augue mi, sollicitudin in convallis non, malesuada id nunc.
-
-In posuere lacus vel purus feugiat semper. Sed hendrerit purus in metus sodales commodo. Donec consectetur lacus id urna varius tincidunt. Praesent ultricies tempus lacus at vestibulum. Suspendisse varius at magna at pellentesque. Curabitur egestas sollicitudin tortor, vel venenatis enim porttitor a. In sed nulla a neque facilisis sagittis a at enim. Aenean tincidunt rutrum est, sit amet iaculis massa sagittis et. Pellentesque semper dui a aliquam dictum. Morbi euismod eleifend ultricies. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer ac orci tempus, sollicitudin massa sit amet, maximus odio. Duis non eleifend velit.
+OTIS is designed to be an easy to assemble and customisable beginner's soldering kit, featuring a metallic owl design on the front, 4 RGB LEDS and is powered by a battery. You can click here to visit the documentation on how to set it up.
