--- a/_posts/2020-06-21-twitter.md
+++ b/_posts/2020-06-21-twitter.md
@@ -7,4 +7,4 @@ redirect_to:
   - https://twitter.com/leedsraspjam
 ---
 
-Click here to visit our Twitter. Twitter is our main source of communication so if you want to stay up to date, follow us here!
+Click here to visit our Twitter page. Twitter is our main source of communication so if you want to stay up to date with our latest news, follow us!
