--- a/_posts/2020-06-21-otis.md
+++ b/_posts/2020-06-21-otis.md
@@ -7,4 +7,4 @@ redirect_to:
   - https://otis.leedsraspjam.co.uk
 ---
 
-OTIS is designed to be an easy to assemble and customisable beginner's soldering kit, featuring a metallic owl design on the front, 4 RGB LEDS and is powered by a battery. You can click here to visit the documentation on how to set it up.
+OTIS is designed to be an easy to assemble and customisable beginner's soldering kit, featuring a metallic owl design on the front, 4 RGB LEDS and is powered by a battery. Visit this microsite for further details and the assembly guide
